--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">DashDoor</string>
+    <string name="welcome_to_dashdoor">Welcome to DashDoor!</string>
+    <string name="logout">Logout</string>
+    <string name="admin_things">Admin Things</string>
 </resources>
