--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="login">Login!</string>
+    <string name="welcome_to_dash_door_hope_you_are_hungry">Welcome to Dash Door, Hope you are Hungry!</string>
+    <string name="enter_a_location">Enter a location</string>
+    <string name="food_type">Food Type</string>
+    <string name="enter_a_type_of_food">Enter a type of food</string>
 </resources>
