small fixes(name changes).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,20 +1,18 @@
 <resources>
     <string name="app_name">DashDoor</string>
-    <string name="exercise">Exercise</string>
+    <string name="location">Exercise</string>
     <string name="enter_an_exercise">Enter an Exercise</string>
-    <string name="weight">Weight</string>
-    <string name="enter_a_weight">Enter a weight</string>
+    <string name="foodType">Weight</string>
+    <string name="enter_a_weight">Enter a foodType</string>
     <string name="enter_reps">Enter Reps</string>
-    <string name="reps">Reps</string>
+    <string name="cost">Reps</string>
     <string name="weight_lb">Weight(lb)</string>
     <string name="log">Log</string>
-    <string name="nothing_to_show_time_to_hit_the_gym">Nothing to show, time to hit the gym</string>
+    <string name="nothing_to_show_time_to_eat">Nothing to show, time to eat</string>
     <string name="welcome_to_the_gymlog_nplease_sign_in">Welcome to the GymLog.\nPlease Sign in.</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="login">Login!</string>
     <string name="welcome_to_dash_door_hope_you_are_hungry">Welcome to Dash Door, Hope you are Hungry!</string>
     <string name="enter_a_location">Enter a location</string>
-    <string name="food_type">Food Type</string>
-    <string name="enter_a_type_of_food">Enter a type of food</string>
 </resources>
