--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="search">Search</string>
     <string name="admin_action">Admin Action</string>
     <string name="welcome_admin_user_what_would_you_like_to_do">Welcome Admin User What would you like to do?</string>
+    <string name="search_history">search history</string>
 </resources>
