--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="meatlovers_12">MeatLovers: $12</string>
     <string name="click_icon_to_add_to_cart">Click Icon to Add to Cart!</string>
     <string name="meatlovers_50">meatlovers $50</string>
+    <string name="burger_time">Burger Time!</string>
 </resources>
